--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -53,7 +53,7 @@ $fontSizes: (
     h5: 1.4em,
     h6: 1.3em,
     label: 0.9em,
-    small: 0.73m
+    small: 0.8em
 );
 
 // Font Weights
